# robot_cognition_system_old

./: CMakeLists.txt  build.sh  openni.sh  package.xml  pub_run.sh  run.sh  sub_run.sh  test_pcd_rgba_compressed_may_25th.pcd  upd_build.sh
src/: upd_publisher.cpp  upd_subscriber.cpp
src/upd_lib/: CMakeLists.txt
src/upd_lib/upd_DEMO/: CMakeLists.txt
